_2010_01_29__11_11_12_ Chi-Hsiu Liang

  * Corrected the source term population for time independent model.

_2010_01_15__20_34_45_ Chi-Hsiu Liang

  * Final checkin. Not very sure about the source term transition probabilities. 

_2010_01_14__23_21_11_ Chi-Hsiu Liang

  * temp checkin

_2010_01_14__21_22_32_ Chi-Hsiu Liang

  * Intermediate commit

_2010_01_05__14_00_14_ Chi-Hsiu Liang

  * Prepare for writing time-independent solutions.

2009-December-29 Struan Robertson

	* MolecularComponents.cpp: Minor change needed for i-propyl fitting example.

2009-December-29 Struan Robertson

	* fitting.cpp: Addition of limit checks to line search of fitting method.

2009-December-21 Struan Robertson

	* fitting.cpp: Initial implementation of the Powell algorithm.

2009-December-21 Struan Robertson

	* fitting.cpp: Re-arrangement and tidy-up.

2009-December-13 Struan Robertson

	* fitting.cpp: Generalized line search method to use vectors.

_2009_12_10__16_29_46_ Chi-Hsiu Liang

  * Some stuff about one-dimensional Fourier grid Hamiltonian for hindered rotors.

2009-December-5 Struan Robertson

	* fitting.cpp: Minor tidying of fitting method.

2009-November-29 Struan Robertson

	* fitting.cpp: Rough sketch of multi-dimensional search added.

_2009_11_27__13_16_47_ Chi-Hsiu Liang

  * Resolved a problem in reverse ILT that only the energy of the first product was taken into account. Thanks to Robin Shannon.

2009-November-19 Chris Morley

	* Windows VC9/distribution/NSISScriptToCreateInstaller.nsi:
	the install directory is now added to the front of PATH
	and to the front of MESMER_DIR. To version 0.11
	
	* src/main.cpp:use only the first directory in MESMER_DIR
	
	These changes should allow a second or later installation to work ok.
	If it is uninstalled the earlier version should work again.
	There may be issues with the start menu items needing to be deleted
	manually sometimes (I haven't sorted out exactly when).

_2009_11_19__12_24_19_ Chi-Hsiu Liang
