@@ -1,3 +1,7 @@
+_2010_02_03__18_16_43_ Chi-Hsiu Liang
+
+  * Correction to the reservoir state and cemetery state in time-independent model
+
 _2010_01_29__11_11_12_ Chi-Hsiu Liang
 
   * Corrected the source term population for time independent model.
